lamp/static/main.css
.navbar.burrow-nav {
    background-color: #003366 !important;
    color: white;
}

.navbar.burrow-nav .dropdown-menu-dark {
    background-color: #002160;
}

div.container-fluid.main-content-div {
    padding-right: 0px;
    padding-left: 0px;
}

.messages .message {
    margin: 15px;
}

.messages .message .message_author {
    font-weight: bold;
}

.messages .message .message_content {
    margin-left: 5px;
}

body {
    margin-left: 15px;
}

.navbar.burrow-nav {
    margin-left: -15px;
}

.google-signin-button {
    display: block;
    background-color: #4285f4;
    color: white;
    height: 50px;
    width: 240px;
    border-radius: 1px;
    text-align: center;
    /*vertical-align: middle;*/
    white-space: nowrap;
    box-shadow: 0 2px 4px 0 rgb(0 0 0 / 25%);
    text-decoration: none;
}

.google-signin-button:hover {
    color: white;
    box-shadow: 0 0 3px 3px rgb(66 133 244 / 30%);
}

.google-signin-button:active {
    background-color: #3367d6;
}

.google-signin-button .g-content-wrapper {
    border: 1px solid transparent;
}

.google-signin-button .g-icon {
    padding: 15px;
    background-color: #ffffff;
    float: left;
    border-radius: 1px;
}

.google-signin-button .g-icon-2 {
    height: 18px;
    width: 18px;
}

.google-signin-button .g-text {
    font-family: Roboto, arial, sans-serif;
    font-size: 14px;
    font-weight: 500;
    letter-spacing: .21px;
    margin-left: 6px;
    margin-right: 6px;
    vertical-align: top;
    font-size: 16px;
    line-height: 48px;
}

/*
    side bar
*/

body {
    min-height: 100vh;
    min-height: -webkit-fill-available;
}

html {
    height: -webkit-fill-available;
}

main {
    display: flex;
    flex-wrap: nowrap;
}

.sidebar {
    display: flex;
    flex-wrap: nowrap;
    height: 100vh;
    height: -webkit-fill-available;
    max-height: 100vh;
    overflow-x: auto;
    overflow-y: hidden;
    float: left;
}

.right_sidebar {
    display: flex;
    flex-wrap: nowrap;
    height: 100vh;
    height: -webkit-fill-available;
    max-height: 100vh;
    overflow-x: auto;
    overflow-y: hidden;
    float: right;
    margin-left: auto;
    margin-right: 0;
}

main div.main-content {
    overflow-y: auto;
}

.sidebar .bi {
    vertical-align: -.125em;
    pointer-events: none;
    fill: currentColor;
}

.sidebar .dropdown-toggle {
    outline: 0;
}

.sidebar .nav-flush .nav-link {
    border-radius: 0;
}

.sidebar .btn-toggle {
    display: inline-flex;
    align-items: center;
    padding: .25rem .5rem;
    font-weight: 600;
    color: rgba(0, 0, 0, .65);
    background-color: transparent;
    border: 0;
}

.sidebar .btn-toggle:hover, .btn-toggle:focus {
    color: rgba(0, 0, 0, .85);
    background-color: #a1d0ff;
}

.sidebar .btn-toggle::before {
    width: 1.25em;
    line-height: 0;
    content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
    transition: transform .35s ease;
    transform-origin: .5em 50%;
}

.sidebar .btn-toggle[aria-expanded="true"] {
    color: rgba(0, 0, 0, .85);
}

.sidebar .btn-toggle[aria-expanded="true"]::before {
    transform: rotate(90deg);
}

.sidebar .btn-toggle-nav a {
    display: inline-flex;
    padding: .1875rem .5rem;
    margin-top: .125rem;
    margin-left: 1.25rem;
    text-decoration: none;
}

.sidebar .btn-toggle-nav a:hover, .btn-toggle-nav a:focus {
    background-color: #a1d0ff;
}

.sidebar .active {
    background-color: #a1d0ff;
}

.scrollarea {
    overflow-y: auto;
}

.sidebar .fw-semibold {
    font-weight: 600;
}

.sidebar .lh-tight {
    line-height: 1.25;
}

.signoutdiv {
    font-family: Roboto, arial, sans-serif;
    font-size: 18px;
    text-align: center;
}

.signinupdiv {
    text-align: center;
    align-content: center;
}

.maintitleheader {
    font-family: Roboto, arial, sans-serif;
    color: #003366;
    font-weight: bold;
    font-size: 18px;
}

.burrow-form label, .burrow-form small {
    text-align: left;
    display: block;
    padding-left: 5px;
}

.burrow-form .form-group {
    margin-bottom: 20px;
}

.burrow-form button[type=submit] {
    margin-top: 5px;
}

.main-content {
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 5px;
}

.main-content-center {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

form.sign-in-form, form.sign-up-form {
    width: 80vw;
    max-width: 500px;
}

.link-no-history:visited {
    color: #0d6efd;
}

.link-no-history:visited:hover {
    color: #0a58ca;
}

.link-no-underline {
    text-decoration: none;
}

.dropdown-check-list {
    display: inline-block;
}

.dropdown-check-list .anchor {
    position: relative;
    cursor: pointer;
    display: inline-block;
    padding: 5px 50px 5px 10px;
    border: 1px solid #ccc;
}

.dropdown-check-list .anchor:after {
    position: absolute;
    content: "";
    border-left: 2px solid black;
    border-top: 2px solid black;
    padding: 5px;
    right: 10px;
    top: 20%;
    -moz-transform: rotate(-135deg);
    -ms-transform: rotate(-135deg);
    -o-transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
    transform: rotate(-135deg);
}

.dropdown-check-list .anchor:active:after {
    right: 8px;
    top: 21%;
}

.dropdown-check-list ul.items {
    padding: 2px;
    display: none;
    margin: 0;
    border: 1px solid #ccc;
    border-top: none;
}

.dropdown-check-list ul.items li {
    list-style: none;
}

.dropdown-check-list.visible .anchor {
    color: #0094ff;
}

.dropdown-check-list.visible .items {
    display: block;
}

.message_author {
    display: inline;
    margin-right: 15px;
}

.badge .announcement {
    margin-left: 15px;
    display: inline-block;
}

.message {
    padding: 10px;
}

.announcement-message {
    background-color: #e6bc04;
    border-radius: 3px;
}

.g-icon-2 svg {
    vertical-align: unset;
}

.homepageheader {
    font-family: Roboto, arial, sans-serif;
    color: #003366;
    font-weight: bold;
    font-size: 32px;
}

.course-list {
    margin-top: 15px;
    margin-bottom: 20px;
}

.main-content {
    min-width: 30%;
}

.btn-toggle-nav a.c-menu-icon {
    padding: 3px;
    text-decoration: none;
    color: black;
}

.btn-toggle-nav a {
    vertical-align: middle;
}

.btn-toggle-nav a.c-menu-icon>svg {
    transition: ease-in-out 100ms;
    width: 16px;
    height: 16px;
}

.btn-toggle-nav a.c-menu-icon:hover>svg {
    width: 20px;
    height: 20px;
}

#context_menu {
    position: fixed;
    top: 0;
    left: 0;
    width: 200px;
    height: 200px;
    z-index:200;
    /* display: */
}

